[package]
name = "LostServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bevy = "0.10.1"
bincode = "1.3.3"
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"
local-ip-address = "0.5.0"
bevy_renet = "0.0.8"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

# For port forwarded servers
public-ip = "0.2.2"
tokio = { version = "1.23.0", features = ["full"] }

lost_lib = { path = "../LostLib" }
rand = "0.8.5"

bevy_rapier3d = "0.21.0"
